# Process this file with autoconf to produce a configure script.
AC_INIT(src/ay8912.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libayemu, 0.9.0)

# Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h)
AC_CHECK_HEADERS(stddef.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([memset])

# wanted by: test/test.c:10
AC_CHECK_HEADERS([fcntl.h]) 
AC_CHECK_HEADERS([sys/ioctl.h])

AC_OUTPUT(src/Makefile test/Makefile Makefile)
